Changed all code to object oriented

--- a/notebooks/Draftplot_linearitycheck.ipynb
+++ b/notebooks/Draftplot_linearitycheck.ipynb
@@ -26,7 +26,6 @@
     "\n",
     "import sys\n",
     "sys.path.append('../src')\n",
-    "import utils as ut\n",
     "\n",
     "from alldata import AllData\n",
     "from ensemble import EnsembleMember\n",
@@ -40,16 +39,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1505dfe8-7070-4b5c-a3ed-1e6a761aaeb8",
+   "metadata": {},
+   "source": [
+    "Read data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fb2503fb-c4d5-495b-824d-14aefa1a3d75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Read data\n",
     "ad = AllData()\n",
-    "ad.option='_lin'\n",
     "ds = ad.gather()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b63b801-2e08-4b81-807a-fda2896905aa",
+   "metadata": {},
+   "source": [
+    "Figure settings"
    ]
   },
   {
@@ -59,13 +72,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mpl.rcParams['lines.linewidth'] = 1.\n",
-    "mpl.rcParams['figure.subplot.wspace'] = .1\n",
-    "mpl.rcParams['figure.subplot.left'] = .15\n",
-    "mpl.rcParams['figure.subplot.right'] = .99\n",
-    "mpl.rcParams['figure.subplot.bottom'] = .1\n",
-    "mpl.rcParams['figure.subplot.top'] = .95\n",
-    "mpl.rcParams['figure.figsize'] = (7,4)"
+    "plt.style.use('../src/style_paper')\n",
+    "\n",
+    "mpl.rc('figure.subplot',left=.12)"
    ]
   },
   {
@@ -76,24 +85,24 @@
    "outputs": [],
    "source": [
     "fig,ax = plt.subplots(5,4,sharex=True,sharey=True)\n",
-    "for b,bas in enumerate(ds.basin.values):\n",
+    "for b,bas in enumerate(ad.basin):\n",
     "    for i in range(4):\n",
     "        ax[b,i].axhline(0,0,1,c='.5',ls=':')\n",
     "    \n",
-    "    ax[b,0].plot(ds.rftime,ds.tanom[:,5,b],c=ut.bcol[bas])\n",
-    "    ax[b,1].plot(ds.rftime,np.sum(ds.tanom[:,:5,b],axis=1),c=ut.bcol[bas])\n",
-    "    ax[b,2].plot(ds.rftime,2*ds.tanom[:,6,b],c=ut.bcol[bas])\n",
-    "    ax[b,3].plot(ds.rftime,.5*ds.tanom[:,7,b],c=ut.bcol[bas])\n",
+    "    ax[b,0].plot(ad.rftime,ad.tanom[:,5,b],c=ad.bcol[bas])\n",
+    "    ax[b,1].plot(ad.rftime,np.sum(ad.tanom[:,:5,b],axis=1),c=ad.bcol[bas])\n",
+    "    ax[b,2].plot(ad.rftime,2*ad.tanom[:,6,b],c=ad.bcol[bas])\n",
+    "    ax[b,3].plot(ad.rftime,.5*ad.tanom[:,7,b],c=ad.bcol[bas])\n",
     "\n",
     "    ax[b,0].set_ylabel(bas)\n",
     "ax[0,0].set_title('TOTL')\n",
     "ax[0,1].set_title('sum of 5')\n",
     "ax[0,2].set_title('HALF * 2')\n",
     "ax[0,3].set_title('DOUB / 2')\n",
-    "fig.supxlabel('time [years]',fontsize=9)\n",
-    "fig.supylabel('Ocean temperature response [degC]',fontsize=9)\n",
+    "fig.supxlabel('Time [years]')\n",
+    "fig.supylabel('Ocean temperature response [degC]')\n",
     "\n",
-    "plt.savefig(f'../draftfigs/linearitycheck{ad.option}.png',dpi=450)\n",
+    "plt.savefig(f'../draftfigs/linearitycheck{ad.option}.png')\n",
     "plt.show()"
    ]
   },
