--- a/notebooks/Draftplot_masks.ipynb
+++ b/notebooks/Draftplot_masks.ipynb
@@ -19,7 +19,18 @@
     "from cartopy.mpl.gridliner import LONGITUDE_FORMATTER, LATITUDE_FORMATTER\n",
     "\n",
     "import numpy as np\n",
-    "import copy"
+    "import copy\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('../src')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da963039-3ff1-491a-9f37-e088c03a9c4c",
+   "metadata": {},
+   "source": [
+    "Read data"
    ]
   },
   {
@@ -38,24 +49,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca69914a-aa54-46c9-baf3-86c991a84a39",
+   "metadata": {},
+   "source": [
+    "Figure settings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "be14a789-b0c8-46da-abdc-612493697f96",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mpl.rcParams['font.family'] = 'serif'\n",
-    "mpl.rcParams['axes.titlesize'] = 9\n",
-    "mpl.rcParams['axes.labelsize'] = 9\n",
-    "mpl.rcParams['legend.fontsize'] = 9\n",
+    "plt.style.use('../src/style_paper')\n",
     "\n",
-    "mpl.rcParams['figure.subplot.wspace'] = .02\n",
-    "mpl.rcParams['figure.subplot.hspace'] = .1\n",
-    "mpl.rcParams['figure.subplot.left'] = .01\n",
-    "mpl.rcParams['figure.subplot.right'] = .99\n",
-    "mpl.rcParams['figure.subplot.top'] = .95\n",
-    "mpl.rcParams['figure.subplot.bottom'] = .01\n",
-    "mpl.rcParams['figure.figsize'] = (5,5)\n"
+    "mpl.rc('figure.subplot',wspace=.02,hspace=.1,left=.01,right=.99,top=.95,bottom=.01)\n",
+    "mpl.rc('figure',figsize=(5,5))\n",
+    "\n",
+    "proj = ccrs.SouthPolarStereo()\n",
+    "cmap = ListedColormap([ad.bcol['Weddell'],ad.bcol['Ross'],ad.bcol['East Ant.'],ad.bcol['Amundsen'],ad.bcol['Peninsula']])\n",
+    "cmap.set_under('w')\n",
+    "cmap.set_over('.5')\n",
+    "\n",
+    "titles = ['a) Old iceberg calving','b) New iceberg calving','c) Old runoff and basal melt','d) New runoff and basal melt']\n",
+    "\n",
+    "savename = f'../draftfigs/masks.png'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df3b6c1e-a3ae-485c-bd30-a578d7f088ca",
+   "metadata": {},
+   "source": [
+    "Make and save plot"
    ]
   },
   {
@@ -65,16 +93,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Plot old and new masks\n",
-    "\n",
-    "proj = ccrs.SouthPolarStereo()\n",
-    "#cmap = plt.get_cmap('tab10',10)\n",
-    "cmap = ListedColormap([\"tab:purple\", \"tab:orange\", \"tab:blue\", \"tab:red\",\"tab:green\"])\n",
-    "cmap.set_under('w')\n",
-    "cmap.set_over('.5')\n",
-    "\n",
-    "titles = ['a) Old iceberg calving','b) New iceberg calving','c) Old runoff and basal melt','d) New runoff and basal melt']\n",
-    "\n",
     "fig = plt.figure()\n",
     "\n",
     "for v,vv in enumerate([ds['calving_point_id'],ds2['calving_point_id'],ds['arrival_point_id'],ds2['arrival_point_id']]):\n",
@@ -89,7 +107,7 @@
     "    gl.xformatter = LONGITUDE_FORMATTER\n",
     "    ax.set_title(titles[v],loc='left')\n",
     "    \n",
-    "plt.savefig(f'../draftfigs/masks.png',dpi=450)\n",
+    "plt.savefig(savename)\n",
     "plt.show()"
    ]
   },
