--- a/notebooks/Draftplot_single_ensemble.ipynb
+++ b/notebooks/Draftplot_single_ensemble.ipynb
@@ -24,17 +24,25 @@
     "\n",
     "import sys\n",
     "sys.path.append('../src')\n",
-    "import utils as ut\n",
     "\n",
     "from alldata import AllData\n",
     "from ensemble import EnsembleMember\n",
     "\n",
-    "#np.set_printoptions(precision=2)\n",
+    "\n",
+    "np.set_printoptions(precision=2)\n",
     "%matplotlib notebook\n",
     "%matplotlib inline\n",
     "%config InlineBackend.print_figure_kwargs={'bbox_inches':None}\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67e960b5-185e-4cb0-af82-5932b993d445",
+   "metadata": {},
+   "source": [
+    "Input parameters"
    ]
   },
   {
@@ -58,6 +66,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "959c0475-e7e2-40a8-ac42-947d02a8b291",
+   "metadata": {},
+   "source": [
+    "Computation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1bbc0e3c-b540-41d1-af26-7a5f6febec77",
@@ -67,32 +83,19 @@
     "#Read data\n",
     "ad = AllData()\n",
     "ad.year0 = year0\n",
-    "ds = ad.gather()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7d67404-034d-467a-9cd1-6cbc87b08ebf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ism = 'CISM_NCA'\n",
-    "esm = 'EC-Earth3'\n",
-    "ssp = '245'\n",
-    "bmp = 'lin'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57eb6305-d953-41c9-b190-b9c67a3e5496",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ens = EnsembleMember(ds,ism=ism,esm=esm,ssp=ssp)\n",
-    "ens.niter=1\n",
+    "ad.gather()\n",
+    "\n",
+    "#Compute iteration of ensemble member\n",
+    "ens = EnsembleMember(ad,ism=ism,esm=esm,ssp=ssp)\n",
     "ens.iterate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5d8d78c-b407-4df5-a6c9-f47f00142aee",
+   "metadata": {},
+   "source": [
+    "Figure settings"
    ]
   },
   {
@@ -102,10 +105,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mpl.rcParams['figure.subplot.wspace'] = .1\n",
-    "mpl.rcParams['figure.subplot.left'] = .15\n",
-    "mpl.rcParams['figure.subplot.right'] = .99\n",
-    "mpl.rcParams['figure.figsize'] = (7,5)"
+    "plt.style.use('../src/style_paper')\n",
+    "\n",
+    "mpl.rc('figure.subplot',left=.15)\n",
+    "\n",
+    "savename = f'../draftfigs/single_ensemble_{ad.year0}{ad.option}.png'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "636520e5-9932-4c57-8671-18043b518a81",
+   "metadata": {},
+   "source": [
+    "Create and save figure"
    ]
   },
   {
@@ -117,13 +129,16 @@
    "source": [
     "fig,ax = plt.subplots(3,5,sharex=True,sharey='row')\n",
     "\n",
+    "#Choose variables to plot\n",
+    "varbs = [ens.TMP,.001*np.cumsum(ens.IML,axis=1),100*ens.SLR]\n",
+    "\n",
     "for b,bas in enumerate(ens.basin.values):\n",
-    "    for v,var in enumerate([ens.TMP,.001*np.cumsum(ens.IML,axis=1),100*ens.SLR]):\n",
+    "    for v,var in enumerate(varbs):\n",
     "        dax = ax[v,b]\n",
-    "        dax.plot(ds.time,var[0,:,b],c='.5')\n",
+    "        dax.plot(ad.time,var[0,:,b],c='.5')\n",
     "        for n in range(1,ens.TMP.shape[0]):\n",
-    "            dax.plot(ds.time,var[n,:,b],c=ut.bcol[bas])\n",
-    "        dax.text(.1,.8,f\"{100*((var[-1,-1,b]-var[-1,0,b])-(var[0,-1,b]-var[0,0,b]))/np.abs(var[0,-1,b]-var[0,0,b]):+.0f}%\",transform=dax.transAxes,weight='bold',c=ut.bcol[bas])\n",
+    "            dax.plot(ad.time,var[n,:,b],c=ad.bcol[bas])\n",
+    "        dax.text(.1,.8,f\"{100*((var[-1,-1,b]-var[-1,0,b])-(var[0,-1,b]-var[0,0,b]))/np.abs(var[0,-1,b]-var[0,0,b]):+.0f}%\",transform=dax.transAxes,weight='bold',c=ad.bcol[bas])\n",
     "        \n",
     "    ax[0,b].set_title(bas)\n",
     "ax[-1,2].set_xlabel('Time [years]')\n",
@@ -131,23 +146,14 @@
     "ax[1,0].set_ylabel('Cumulative ice mass loss \\n [1000 Gt]')\n",
     "ax[2,0].set_ylabel('Sea level rise [cm]')\n",
     "\n",
-    "plt.savefig(f'../draftfigs/single_ensemble_{ad.year0}{ad.option}.png',dpi=450,facecolor='w',transparent=False)\n",
-    "plt.show()\n",
-    "ds.close()"
+    "plt.savefig(savename)\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c6b3a02-0e68-4b35-a2db-b01ae422a231",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7dd15fdf-d754-41d2-b599-7c420ebf8162",
+   "id": "f3c5c953-b5eb-4395-97cf-287913b48d56",
    "metadata": {},
    "outputs": [],
    "source": []
