--- a/notebooks/Draftplot_ts_control.ipynb
+++ b/notebooks/Draftplot_ts_control.ipynb
@@ -31,7 +31,37 @@
     "import sys\n",
     "\n",
     "sys.path.append('../src')\n",
-    "import utils as ut"
+    "\n",
+    "from alldata import AllData\n",
+    "\n",
+    "plt.style.use('../src/style_paper')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04f67db5-b060-4e69-b2f3-75c46539f57b",
+   "metadata": {},
+   "source": [
+    "Input parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "486137e6-b2fe-4a30-9140-bb44631140dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Percentiles for uncertainty ranges\n",
+    "perc = [17,83]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f7edf5e-b8cb-4f39-b868-3d00fa55bbba",
+   "metadata": {},
+   "source": [
+    "Read annual time series"
    ]
   },
   {
@@ -42,9 +72,8 @@
    "outputs": [],
    "source": [
     "ds = xr.open_dataset(f'../data/temperature_ann_ctrl.nc').isel(basin=slice(0,5))\n",
-    "#ds = ds.isel(time=slice(0,-50))\n",
     "basin = ds.basin\n",
-    "ttime = ds.time+100\n",
+    "ttime = ds.time+100 #Shift to append control after spinup\n",
     "tbas = ds.temp\n",
     "ds.close()\n",
     "\n",
@@ -57,7 +86,17 @@
     "lon = ds.lon\n",
     "lat = ds.lat\n",
     "mask = ds.mask\n",
-    "ds.close()"
+    "ds.close()\n",
+    "\n",
+    "ad = AllData()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afecdf2a-eecd-4a8c-9345-0ff99a1e04ca",
+   "metadata": {},
+   "source": [
+    "Read reanalysis data"
    ]
   },
   {
@@ -67,12 +106,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Get reanalysis data\n",
     "ds = xr.open_dataset('../data/eveline/thetao_sector_timeseries_global-reanalysis-phy-001-026-grepv1_1993_2018.nc')\n",
     "ds = ds.drop_sel(product=['mean','std'])\n",
     "evbas = ['eais','ross','amun','wedd','apen']\n",
-    "\n",
-    "perc = [17,83]\n",
     "\n",
     "rean = np.zeros(len(evbas))\n",
     "r_lo = np.zeros(len(evbas))\n",
@@ -84,9 +120,15 @@
     "    r_lo[b] = np.percentile(var,perc[0])\n",
     "    r_hi[b] = np.percentile(var,perc[1])\n",
     "    \n",
-    "    print(bas,f'{rean[b]: .2f}',f'{r_lo[b]: .2f}',f'{r_hi[b]: .2f}')\n",
-    "\n",
     "ds.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4acf5439-c219-441b-8f96-be4258a3bea2",
+   "metadata": {},
+   "source": [
+    "Read CMIP6 piControl"
    ]
   },
   {
@@ -96,12 +138,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Read CMIP6 piControl\n",
     "ds = xr.open_dataset('../data/temperature_cmip6_piControl.nc')\n",
     "ds = ds.isel(time=slice(0,-50))\n",
     "ctime = ds.time + 550\n",
     "ctbas = ds.temp\n",
     "ds.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58fa9b9f-584d-4c61-8301-be64b9f4c1c7",
+   "metadata": {},
+   "source": [
+    "Prepare figure"
    ]
   },
   {
@@ -111,12 +160,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mpl.rcParams['figure.subplot.wspace'] = .2\n",
-    "mpl.rcParams['figure.subplot.left'] = .1\n",
-    "mpl.rcParams['figure.subplot.right'] = .9\n",
-    "mpl.rcParams['figure.figsize'] = (7,5)\n",
+    "mpl.rc('lines',linewidth=.5)\n",
+    "mpl.rc('figure.subplot',wspace=.2,right=.9)\n",
     "\n",
-    "btitle = ['a) East Antarctica','b) Ross','d) Amundsen','e) Weddell','f) Peninsula']"
+    "btitle = ['a) East Antarctica','b) Ross','d) Amundsen','e) Weddell','f) Peninsula']\n",
+    "\n",
+    "nax = [1,2,4,5,6]\n",
+    "alpha = .3\n",
+    "\n",
+    "savename = f'../draftfigs/ts_control.png'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a3f52dd-14fa-42e2-a9e3-ef66cdc57f7f",
+   "metadata": {},
+   "source": [
+    "Make and save figure"
    ]
   },
   {
@@ -126,37 +186,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nax = [1,2,4,5,6]\n",
-    "alpha = .3\n",
-    "lw = .5\n",
-    "\n",
     "fig = plt.figure()\n",
     "\n",
+    "#Create map of ocean basins\n",
     "ax = fig.add_subplot(233,projection=ccrs.SouthPolarStereo())\n",
     "ax.set_extent([-180, 180, -80, -63], crs=ccrs.PlateCarree())\n",
     "for b,bas in enumerate(basin.values):\n",
-    "    im = ax.scatter(lon,lat,15*np.nansum(mask[b,:,:,:],axis=0),c=ut.bcol[bas],transform=ccrs.PlateCarree(),label=bas,lw=0,alpha=1)\n",
+    "    im = ax.scatter(lon,lat,15*np.nansum(mask[b,:,:,:],axis=0),c=ad.bcol[bas],transform=ccrs.PlateCarree(),label=bas,lw=0,alpha=1)\n",
     "ax.coastlines(lw=.1)\n",
-    "ax.set_title('c) Ocean sectors',loc='left')\n",
-    "\n",
+    "ax.set_title('c) Ocean basins',loc='left')\n",
     "gl = ax.gridlines(crs=ccrs.PlateCarree(),draw_labels=False,color='k',linewidth=.1)\n",
     "gl.xlocator = mticker.FixedLocator(np.arange(-180,210,30))\n",
     "gl.xformatter = LONGITUDE_FORMATTER\n",
     "\n",
+    "#Plot time series of pi control, spinup and new control per basin\n",
     "for b,bas in enumerate(basin.values):\n",
     "    ax = fig.add_subplot(2,3,nax[b])\n",
     "    temp = tbas.sel(basin=bas)\n",
     "\n",
-    "    ax.plot(ttime,temp,c=ut.bcol[bas],lw=lw,zorder=9)\n",
-    "    ax.plot(ttime2,tbas2.sel(basin=bas),c=ut.bcol[bas],lw=lw,zorder=9)\n",
-    "    ax.plot(ctime,ctbas.sel(basin=bas),color='k',lw=lw)        \n",
-    "    #ax.plot([ctime[-1],ttime[0]],[ctbas.sel(basin=bas)[-1],temp[0]],color='k',lw=lw)\n",
+    "    ax.plot(ttime,temp,c=ad.bcol[bas],zorder=9)\n",
+    "    ax.plot(ttime2,tbas2.sel(basin=bas),c=ad.bcol[bas],zorder=9)\n",
+    "    ax.plot(ctime,ctbas.sel(basin=bas),color='k')        \n",
     "        \n",
     "    ax.fill_between([ctime[0],ttime[-1]],[r_lo[b],r_lo[b]],[r_hi[b],r_hi[b]],color='tab:olive',alpha=alpha,clip_on=False,label=f'Reanalysis',lw=0)\n",
     "    ax.fill_between([ctime[0],ctime[-1]],[np.percentile(ctbas.sel(basin=bas),perc[0]),np.percentile(ctbas.sel(basin=bas),perc[0])],[np.percentile(ctbas.sel(basin=bas),perc[1]),np.percentile(ctbas.sel(basin=bas),perc[1])],color='k',alpha=alpha,lw=0,clip_on=False)\n",
-    "    ax.fill_between([ttime[-150],ttime[-1]],[np.percentile(temp[-150:],perc[0]),np.percentile(temp[-150:],perc[0])],[np.percentile(temp[-150:],perc[1]),np.percentile(temp[-150:],perc[1])],color=ut.bcol[bas],alpha=alpha,lw=0,clip_on=False)\n",
-    "\n",
+    "    ax.fill_between([ttime[-150],ttime[-1]],[np.percentile(temp[-150:],perc[0]),np.percentile(temp[-150:],perc[0])],[np.percentile(temp[-150:],perc[1]),np.percentile(temp[-150:],perc[1])],color=ad.bcol[bas],alpha=alpha,lw=0,clip_on=False)\n",
     "    \n",
+    "    #Include labels and titles\n",
     "    ax.set_title(btitle[b],loc='left')\n",
     "\n",
     "    if nax[b] == 1:\n",
@@ -174,6 +230,7 @@
     "        ax.text(50,-1.7,'spin\\nup',ha='center',c='tab:red')\n",
     "        ax.text(175,-1.7,'CTRL',ha='center',c='tab:red')\n",
     "\n",
+    "    #Some other specifications\n",
     "    ax.set_ylim([-2,3])\n",
     "    ax.set_xticks([-450,0,100,250])\n",
     "    ax.set_xlim([-450,250])\n",
@@ -181,7 +238,7 @@
     "    \n",
     "fig.supylabel('Subsurface ocean temperature [degC]',fontsize=9)\n",
     "\n",
-    "plt.savefig(f'../draftfigs/ts_control.png',dpi=450,facecolor='w',transparent=False)\n",
+    "plt.savefig(savename)\n",
     "plt.show()"
    ]
   },
