--- a/notebooks/Plot_perturbations.ipynb
+++ b/notebooks/Plot_perturbations.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bb86fb04-7461-470f-b31a-3d2159966311",
+   "metadata": {},
+   "source": [
+    "This notebook allows to quickly plot new monthly data from ongoing runs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a5abf7ce-2e2c-4bb2-abf4-29c236297546",
@@ -15,7 +23,6 @@
     "import sys\n",
     "\n",
     "sys.path.append('../src')\n",
-    "import utils as ut\n",
     "\n",
     "from rundata import RunData\n",
     "\n",
@@ -57,13 +64,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mpl.rcParams['figure.subplot.wspace'] = .05\n",
-    "mpl.rcParams['figure.subplot.hspace'] = .05\n",
-    "mpl.rcParams['figure.subplot.left'] = .1\n",
-    "mpl.rcParams['figure.subplot.right'] = .9\n",
-    "mpl.rcParams['lines.linewidth'] = 2.\n",
-    "mpl.rcParams['figure.figsize'] = (16,8)\n",
-    "mpl.rcParams['figure.subplot.bottom'] = .08"
+    "plt.style.use('../src/style_paper')\n",
+    "\n",
+    "mpl.rc('figure',figsize=(16,8))"
    ]
   },
   {
@@ -73,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmax = 50*12\n",
+    "tmax = 100*12\n",
     "nbasins = 5 #5 or 7\n",
     "\n",
     "fig,ax = plt.subplots(3,nbasins,sharex=True,sharey='row')\n",
@@ -90,14 +93,14 @@
     "for r,run in enumerate(runs):\n",
     "    ds = xr.open_dataset(f'../data/temperature_mon_{run}.nc').isel(time=slice(0,tmax))\n",
     "    for b,bas in enumerate(ds.basin.values[:nbasins]):\n",
-    "        ax[0,b].plot(ds.time/12,ds.temp.sel(basin=bas),c=ut.rcol[run],label=run)\n",
-    "        ax[1,b].plot(ds.time/12,ds.temp.sel(basin=bas)-ctrl.temp.sel(basin=bas),c=ut.rcol[run])\n",
+    "        ax[0,b].plot(ds.time/12,ds.temp.sel(basin=bas),c=rd.rcol[run],label=run)\n",
+    "        ax[1,b].plot(ds.time/12,ds.temp.sel(basin=bas)-ctrl.temp.sel(basin=bas),c=rd.rcol[run])\n",
     "        if run != 'ctrl':\n",
-    "            ax[2,b].plot(ds.time/12,ds.temp.sel(basin=bas)-ctrl2.sel(basin=bas),c=ut.rcol[run])\n",
+    "            ax[2,b].plot(ds.time/12,ds.temp.sel(basin=bas)-ctrl2.sel(basin=bas),c=rd.rcol[run])\n",
     "        else:\n",
-    "            ax[0,b].plot(ds.time/12,ctrl2.sel(basin=bas),c=ut.rcol[run],lw=.5)\n",
-    "        ax[2,b].axhline(0,0,1,c=ut.rcol['ctrl'],lw=.5)\n",
-    "        ax[0,b].set_title(bas,color=ut.bcol[bas],loc='left')\n",
+    "            ax[0,b].plot(ds.time/12,ctrl2.sel(basin=bas),c=rd.rcol[run],lw=.5)\n",
+    "        ax[2,b].axhline(0,0,1,c=rd.rcol['ctrl'],lw=.5)\n",
+    "        ax[0,b].set_title(bas,color=rd.bcol[bas],loc='left')\n",
     "    ds.close()\n",
     "    \n",
     "ax[0,0].legend()\n",
