--- a/notebooks/Video_subsurfacetemp.ipynb
+++ b/notebooks/Video_subsurfacetemp.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "#General input params\n",
     "\n",
-    "run  = 'tot2'  # New run to be compared to control\n",
+    "run  = 'amun'  # New run to be compared to control\n",
     "jmax = 55      # Maximum j index for northern latitudinal extent\n",
     "olev = 36      # Depth index, 34 = 300m, 36 = 370m\n",
     "olevS = 23"
@@ -248,7 +248,7 @@
     "    \n",
     "    savename = f'../videos/{prefix}_{m:04.0f}.png'\n",
     "    plt.savefig(savename,dpi=150,facecolor='w',transparent=False)\n",
-    "    print('Saved',m,'of',nmonths,'months',end='\\r')\n",
+    "    print('Saved',m+1,'of',nmonths,'months',end='\\r')\n",
     "    plt.close()\n",
     "    "
    ]
