update video notebootk

--- a/notebooks/Video_subsurfacetemp.ipynb
+++ b/notebooks/Video_subsurfacetemp.ipynb
@@ -25,7 +25,24 @@
     "import sys,os\n",
     "\n",
     "sys.path.append('../src')\n",
-    "import utils as ut"
+    "\n",
+    "from rundata import RunData\n",
+    "from alldata import AllData\n",
+    "\n",
+    "np.set_printoptions(precision=2)\n",
+    "%matplotlib notebook\n",
+    "%matplotlib inline\n",
+    "%config InlineBackend.print_figure_kwargs={'bbox_inches':None}\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09426146-0e03-4e57-82c8-535438b8094a",
+   "metadata": {},
+   "source": [
+    "Input parameters"
    ]
   },
   {
@@ -35,37 +52,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#General input params\n",
-    "\n",
-    "run  = 'amun'  # New run to be compared to control\n",
-    "jmax = 55      # Maximum j index for northern latitudinal extent\n",
-    "olev = 36      # Depth index, 34 = 300m, 36 = 370m\n",
-    "olevS = 23"
+    "newrun  = 'tot2'  # New run to be compared to control\n",
+    "depthT = 370\n",
+    "depthS = 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcf74401-cdf0-446b-8d88-ac9578325981",
+   "metadata": {},
+   "source": [
+    "Get 2d variables"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48deb197-90c5-4b1c-a347-e7d66a723423",
+   "id": "0ddb9659-4abf-4653-8f0b-5abce3c2a4cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_fnames(run):\n",
-    "    fnames = sorted(glob.glob(f'../data/ecefiles/{run}/{run}*T.nc'))\n",
-    "    if run == 'n011':\n",
-    "        fnames = fnames[38:] #Omit the first 100 years which is spin up\n",
-    "    #    rrun = 'ctrl'\n",
-    "    #else:\n",
-    "    #    rrun = run\n",
+    "ad = AllData()\n",
     "\n",
-    "    nmonths = 0\n",
-    "    for fname in fnames:\n",
-    "        ds = xr.open_dataset(fname)\n",
-    "        nmonths += len(ds.time_counter)\n",
-    "        ds.close()\n",
-    "    nyears = int(np.floor(nmonths/12))\n",
-    "    print(run,nmonths, 'months =',nyears,'y',int(nmonths-12*nyears),'m')\n",
-    "    return fnames,nmonths"
+    "rd1 = RunData(newrun)\n",
+    "rd1.checkfornewdata()\n",
+    "rd1.get_var2d('thetao',depthT)\n",
+    "rd1.get_var2d('so',depthS)\n",
+    "\n",
+    "rd0 = RunData('ctrl')\n",
+    "rd0.get_var2d('thetao',depthT,rd1.nmonths)\n",
+    "rd0.get_var2d('so',depthS,rd1.nmonths)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecdb9617-e875-4489-a19c-ced4841b888f",
+   "metadata": {},
+   "source": [
+    "Get basin mask for inset"
    ]
   },
   {
@@ -75,76 +99,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = xr.open_dataset(f'../data/basinmask.nc').isel(y=slice(0,jmax),basin=slice(0,5))\n",
-    "lon = ds.lon\n",
-    "lat = ds.lat\n",
-    "mask = ds.mask\n",
-    "basin = ds.basin.values\n",
-    "ds.close()\n",
-    "\n",
-    "mask = np.nansum(mask,axis=1)"
+    "ds = xr.open_dataset(f'../data/basinmask.nc').isel(y=slice(0,rd1.jmax),basin=slice(0,5))\n",
+    "mask = np.nansum(ds.mask,axis=1)\n",
+    "ds.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0f9db4a-2ac1-4022-82a5-36985966e001",
+   "metadata": {},
+   "source": [
+    "Get monthly teperature time series"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "dd6513f6-d963-469c-be79-a49240299e83",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "runs = np.append([run],'n011')\n",
-    "\n",
     "ds = xr.open_dataset(f'../data/temperature_mon_ctrl.nc').isel(basin=slice(0,5))\n",
-    "tempc = ds.temp\n",
+    "tempc = ds.temp.isel(time=slice(0,rd1.nmonths))\n",
     "ds.close()\n",
     "\n",
-    "ds = xr.open_dataset(f'../data/temperature_mon_{run}.nc').isel(basin=slice(0,5))\n",
+    "ds = xr.open_dataset(f'../data/temperature_mon_{newrun}.nc').isel(basin=slice(0,5))\n",
     "time = ds.time.values/12\n",
     "tempr = ds.temp\n",
     "ds.close()\n",
-    "\n",
-    "dtemp = tempr-tempc[:len(time)]\n",
-    "nmonths = len(time)\n",
-    "nyears = int(np.floor(nmonths/12))\n",
-    "print(nmonths,nyears,nmonths-12*nyears)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "186293c3-7d9e-45aa-857f-83ccc8421107",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "var = {}\n",
-    "varS = {}\n",
-    "\n",
-    "for rn in runs:\n",
-    "    fnames,nmon = get_fnames(rn)\n",
-    "    if rn==run:\n",
-    "        assert nmon==nmonths,'Need to run Read_ece_ts_oceantemp'\n",
-    "    var[rn]  = np.zeros((nmonths,lon.shape[0],lon.shape[1]))\n",
-    "    varS[rn] = np.zeros((nmonths,lon.shape[0],lon.shape[1]))\n",
-    "    c = -1\n",
-    "    for fname in fnames:\n",
-    "        ds = xr.open_dataset(fname).isel(y=slice(0,jmax))\n",
-    "        if fname == fnames[0]:\n",
-    "            dep = ds['olevel'][olev].values\n",
-    "            depS = ds['olevel'][olevS].values\n",
-    "        for t,tt in enumerate(ds['time_counter'].values):\n",
-    "            c+=1\n",
-    "            if c>=nmonths:\n",
-    "                break\n",
-    "            var[rn][c,:,:]  = ds['thetao'].isel(olevel=olev,time_counter=t)\n",
-    "            varS[rn][c,:,:] = ds['so'].isel(olevel=olevS,time_counter=t)\n",
-    "        ds.close()\n",
-    "        if c>=nmonths:\n",
-    "            break\n",
-    "print(dep,depS)"
+    "dtemp = tempr-tempc"
    ]
   },
   {
@@ -154,21 +137,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmap = 'cmo.balance'\n",
-    "vmin = -2\n",
-    "vmax = 2\n",
+    "cmaps = {}\n",
+    "vmins = {}\n",
+    "vmaxs = {}\n",
     "\n",
-    "cmapS = 'cmo.balance'\n",
-    "vminS = -1\n",
-    "vmaxS = 1\n",
+    "cmaps['thetao'] = 'cmo.balance'\n",
+    "cmaps['so']     = 'cmo.tarn_r'\n",
+    "vmins['thetao'] = -2\n",
+    "vmins['so']     = -1\n",
+    "vmaxs['thetao'] = 2\n",
+    "vmaxs['so']     = 1\n",
     "\n",
-    "mpl.rcParams['figure.figsize'] = (15,5)\n",
-    "mpl.rcParams['figure.subplot.wspace'] = .15\n",
-    "mpl.rcParams['figure.subplot.hspace'] = .01\n",
-    "mpl.rcParams['figure.subplot.left'] = .01\n",
-    "mpl.rcParams['figure.subplot.right'] = .99\n",
-    "mpl.rcParams['figure.subplot.bottom'] = .1\n",
-    "mpl.rcParams['figure.subplot.top'] = .9\n",
+    "varname = {}\n",
+    "varname['thetao'] = 'Temperature'\n",
+    "varname['so']     = 'Salinity'\n",
+    "\n",
+    "mpl.rc('figure',figsize=(15,5))\n",
+    "mpl.rc('figure.subplot',wspace=.15,hspace=.01,left=.01,right=.99,bottom=.1,top=.9)\n",
     "\n",
     "mnames = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec']"
    ]
@@ -184,59 +169,41 @@
    "source": [
     "#Save frames\n",
     "\n",
-    "prefix = f'substemp_{run}_mon'\n",
+    "prefix = f'substemp_{newrun}_mon'\n",
     "\n",
-    "framerate = nmonths/60\n",
+    "framerate = rd1.nmonths/60\n",
     "\n",
     "#for m in range(nmonths-2,nmonths):\n",
-    "for m in range(nmonths):\n",
+    "for m in range(rd1.nmonths):\n",
     "    fig = plt.figure()\n",
-    "        \n",
-    "    ax = fig.add_subplot(132,projection=ccrs.SouthPolarStereo())\n",
-    "    ax.set_extent([-180, 180, -80, -59], crs=ccrs.PlateCarree())\n",
-    "    im = ax.scatter(lon,lat,5,c=var[run][m,:,:]-var['n011'][m,:,:],cmap=cmap,vmin=vmin,vmax=vmax,transform=ccrs.PlateCarree())\n",
-    "    #im = ax.pcolormesh(lon[:,1:-1],lat[:,1:-1],var['tot2'][m,:,1:-1]-var['n011'][m,:,1:-1],cmap=cmap,vmin=vmin,vmax=vmax,transform=ccrs.PlateCarree())\n",
-    "    #im = ax.pcolormesh(lon,lat,var['tot2'][m,:,:]-var['n011'][m,:,:],cmap=cmap,vmin=vmin,vmax=vmax,transform=ccrs.PlateCarree())\n",
-    "\n",
-    "    ax.add_feature(cartopy.feature.LAND.with_scale('10m'),facecolor='.7')\n",
-    "    ax.coastlines(linewidth=0.4, zorder=2, resolution='10m')\n",
-    "        \n",
-    "    axins = inset_axes(ax,width=\"5%\",height=\"100%\",loc='center right',borderpad=-2)\n",
-    "    cb = fig.colorbar(im, cax=axins)\n",
     "    \n",
-    "    ax.set_title(f'Temperature anomaly at {dep:.0f}m depth [degC]')\n",
-    "    ax.set_axis_off()\n",
+    "    for v,vv in enumerate(['so','thetao']):\n",
+    "        ax = fig.add_subplot(1,3,v+1,projection=ccrs.SouthPolarStereo())\n",
+    "        ax.set_extent([-180, 180, -80, -59], crs=ccrs.PlateCarree())\n",
+    "        im = ax.scatter(rd1.lon,rd1.lat,5,c=rd1.var2d[vv][m,:,:]-rd0.var2d[vv][m,:,:],cmap=cmaps[vv],vmin=vmins[vv],vmax=vmaxs[vv],transform=ccrs.PlateCarree())\n",
+    "        ax.add_feature(cartopy.feature.LAND.with_scale('10m'),facecolor='.7')\n",
+    "        ax.coastlines(linewidth=0.4, zorder=2, resolution='10m')\n",
+    "        axins = inset_axes(ax,width=\"5%\",height=\"100%\",loc='center right',borderpad=-2)\n",
+    "        cb = fig.colorbar(im, cax=axins)\n",
     "    \n",
-    "    ax = fig.add_subplot(131,projection=ccrs.SouthPolarStereo())\n",
-    "    ax.set_extent([-180, 180, -80, -59], crs=ccrs.PlateCarree())\n",
-    "    im = ax.scatter(lon,lat,5,c=varS[run][m,:,:]-varS['n011'][m,:,:],cmap=cmapS,vmin=vminS,vmax=vmaxS,transform=ccrs.PlateCarree())\n",
-    "    #im = ax.pcolormesh(lon[:,1:-1],lat[:,1:-1],var['tot2'][m,:,1:-1]-var['n011'][m,:,1:-1],cmap=cmap,vmin=vmin,vmax=vmax,transform=ccrs.PlateCarree())\n",
-    "    #im = ax.pcolormesh(lon,lat,var['tot2'][m,:,:]-var['n011'][m,:,:],cmap=cmap,vmin=vmin,vmax=vmax,transform=ccrs.PlateCarree())\n",
-    "\n",
-    "    ax.add_feature(cartopy.feature.LAND.with_scale('10m'),facecolor='.7')\n",
-    "    ax.coastlines(linewidth=0.4, zorder=2, resolution='10m')\n",
-    "        \n",
-    "    axins = inset_axes(ax,width=\"5%\",height=\"100%\",loc='center right',borderpad=-2)\n",
-    "    cb = fig.colorbar(im, cax=axins)\n",
-    "    \n",
-    "    ax.set_title(f'Salinity anomaly at {depS:.0f}m depth [degC]')\n",
-    "    ax.set_axis_off()   \n",
+    "        ax.set_title(f'{varname[vv]} anomaly at {rd1.dep2d[vv]:.0f}m depth [degC]')\n",
+    "        ax.set_axis_off()\n",
     "\n",
     "    ax = fig.add_subplot(133)\n",
     "    ax.axhline(0,0,1,color='.5',ls=':')\n",
-    "    for b,bas in enumerate(basin):\n",
-    "        ax.plot(time[:m+1],dtemp.sel(basin=bas)[:m+1],c=ut.bcol[bas])\n",
-    "        ax.scatter(time[m],dtemp.sel(basin=bas)[m],40,c=ut.bcol[bas])\n",
-    "    ax.set_xlim([0,np.ceil(nmonths/12)])\n",
-    "    ax.set_ylim([vmin,vmax]) \n",
+    "    for b,bas in enumerate(ad.basin):\n",
+    "        ax.plot(time[:m+1],dtemp.sel(basin=bas)[:m+1],c=ad.bcol[bas])\n",
+    "        ax.scatter(time[m],dtemp.sel(basin=bas)[m],40,c=ad.bcol[bas])\n",
+    "    ax.set_xlim([0,np.ceil(rd1.nmonths/12)])\n",
+    "    ax.set_ylim([vmins['thetao'],vmaxs['thetao']]) \n",
     "    ax.set_yticklabels([])\n",
     "    ax.set_title('Subsurface ocean temperature anomaly [degC]')\n",
     "    ax.set_xlabel('Years')\n",
     "\n",
     "    axins = inset_axes(ax,width=\"30%\",height=\"30%\",loc='lower left',borderpad=0,axes_class=cartopy.mpl.geoaxes.GeoAxes,axes_kwargs=dict(map_projection=cartopy.crs.SouthPolarStereo()))\n",
     "    axins.set_extent([-180, 180, -80, -60], crs=ccrs.PlateCarree())\n",
-    "    for b,bas in enumerate(basin):\n",
-    "        axins.scatter(lon,lat,5*mask[b,:,:],c=ut.bcol[bas],lw=0,transform=ccrs.PlateCarree())\n",
+    "    for b,bas in enumerate(ad.basin):\n",
+    "        axins.scatter(rd1.lon,rd1.lat,5*mask[b,:,:],c=ad.bcol[bas],lw=0,transform=ccrs.PlateCarree())\n",
     "\n",
     "    axins.add_feature(cartopy.feature.LAND.with_scale('10m'),facecolor='.7')\n",
     "    axins.coastlines(linewidth=0.4, zorder=2, resolution='10m')\n",
@@ -244,11 +211,11 @@
     "    \n",
     "    y2d = int(np.floor(m/12))\n",
     "    m2d = int(m-12*y2d)\n",
-    "    fig.suptitle(f'{mnames[m2d]} {y2d:03.0f} of {nyears:03.0f}')\n",
+    "    fig.suptitle(f'{mnames[m2d]} {y2d:03.0f} of {rd1.nyears:03.0f}')\n",
     "    \n",
     "    savename = f'../videos/{prefix}_{m:04.0f}.png'\n",
     "    plt.savefig(savename,dpi=150,facecolor='w',transparent=False)\n",
-    "    print('Saved',m+1,'of',nmonths,'months',end='\\r')\n",
+    "    print('Saved',m+1,'of',rd1.nmonths,'months',end='\\r')\n",
     "    plt.close()\n",
     "    "
    ]
